# SPDF3D

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake-utils/: libraries.cmake
inc/: ArgumentParser.h  Enums.h  MyOcafApplication.h  PDF3D.h  StepLoader.h  Structures.h  Utils.h
src/: ArgumentParser.cpp  MyOcafApplication.cpp  PDF3D.cpp  StepLoader.cpp  Structures.cpp  spdf3d.cpp
